--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -135,7 +135,6 @@
  HNN_Den_Xiao_Ping_hog:0 "邓小平"
  HNN_Chen_Yi_for:0 "陈毅"
  HNN_Zhou_En_Lai_for:0 "周恩来"
- HNN_guo_moruo_for:0 "郭沫若"
  HNN_li_wei_han_for:0 "李维汉"
  HNN_tang_xiangming_hog:0 "汤芗铭"
  HNN_shi_ding_wu_hog:0 "石顶武"
@@ -152,7 +151,6 @@
  HNN_Chen_Yun_eco:0 "陈云"
  HNN_Li_Fu_Chun_eco:0 "李富春"
  HNN_hua_luo_geng_eco:0 "华罗庚"
- HNN_zhao_zi_yang_eco:0 "赵紫阳"
  HNN_Bo_Yi_Bo_eco:0 "薄一波"
  HNN_shi_yin_shun_eco:0 "印顺法师"
  HNN_chen_quzhen:0 "陈渠珍"
@@ -1267,7 +1265,9 @@
  POLITICS_HNN_Chen_Yun_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年6月13日，大清帝国 江苏省 青浦县§!\n§Y军旅生涯：§!§g陈云出生于江苏省苏州府吴江县汾湖巡检司（原久泳乡）章练塘的一个农户家庭。他两岁丧父，四岁丧母，与胞姐陈星由外祖母抚养，过继给舅父廖文光，改姓廖，名陈云。1917年，经镇颜安小学校长杜衡伯举荐，免费入颜安高等小学读书。1919年，因家贫无力继续求学，经老师张行恭介绍，到上海商务印书馆当学徒，就此接触到了工团主义吗，也是这段时间他初次接触到了经济运作方式。1925年五卅运动时期，陈云被推选为商务印书馆罢工临时委员会委员长，与沈雁冰等一起领导全馆职工大罢工。随后由董亦湘、恽雨棠介绍加入中国工团党，就近在上海总工会中任职，大革命期间参与并领导了多次上海工人起义。\n\n大革命失败后，他和汪寿华等人一起转入租界继续在上海斗争，同时负责与周恩来的特科沟通，接应特科特工，为他们安排假身份。1932年上海起义失败后，上海总工会进一步收缩，而陈云也在于董必武多次沟通后，选择离开上海，加入了三省边界根据地，负责根据地的经济工作。"
  HNN_Qian_Xuesen: "钱学森"
  HNN_Qian_Xue_DESC:0 "钱学森，1911年12月11日生于上海，出身于吴越钱氏家族，是五代吴越国国王钱镠的第33代孙。1933年毕业于国立交通大学，随后赴美留学，在获得美国麻省理工学院航空工程理学硕士学位后至加州理工学院求见空气动力学权威西奥多·冯·卡门教授，征求进修意见。冯·卡门建议钱学森入加州理工学院研究院进修。同年秋，入加州理工学院研究院，师从冯·卡门。在美国求学的同时，钱学生也心系祖国。在祖国统一，向他抛来橄榄枝的第一时间他便启程归乡。"
+ HNN_guo_moruo_for:0 "郭沫若"
  Guo_Mo_DESC:0 "郭沫若是四川省乐山县人，少年曾就读于成都石室中学。父亲郭朝沛经营商业。母亲杜福荪，是一个没落的官宦人家的女儿。1914年，郭沫若留学日本，先于旧制第一高等学校习日语，升读第六高等学校，1918年入九州帝国大学医学部，1923年毕业。1921年1月，还在上学的郭沫若以病假名义休学3个月，以便前往京都帝国大学旁听文科。1921年发表第一本新诗集《女神》。同年又与郁达夫等人一同创立文学学社“创造社”，是新文化运动的重要旗手。"
+ HNN_guo_moruo_for_desc:0 "§Y生于：§!§L1892年11月16日；大清帝国、四川省乐山县§!\n§Y派系：§!§l技官派§!\n§Y背景：§!§L郭沫若是四川省乐山县人，少年曾就读于成都石室中学。父亲郭朝沛经营商业。母亲杜福荪，是一个没落的官宦人家的女儿。1914年，郭沫若留学日本，先于旧制第一高等学校习日语，升读第六高等学校，1918年入九州帝国大学医学部，1923年毕业。1921年1月，还在上学的郭沫若以病假名义休学3个月，以便前往京都帝国大学旁听文科。1921年发表第一本新诗集《女神》。同年又与郁达夫等人一同创立文学学社“创造社”，是新文化运动的重要旗手。§!"
  HNN_Hu_Yao_Bang: "胡耀邦"
  POLITICS_HNN_HU_YAOBANG_DESC:0 "胡耀邦生于湖南省浏阳县西岭镇中和乡苍坊村，家中因行九而乳名九伢子。1926年，胡耀邦在读完初小后，到文家市的里仁学堂读高小，学堂校长陈世乔、教师甘思藻、吴千晋等都是工团党员，胡耀邦因此开始吸收工团主义。1927年，大革命失败，里仁学堂被查封，陈世乔、吴千晋等人被北洋军阀逮捕并杀害。1929年，胡耀邦转到浏阳县立初级中学读书，并经本县杨桂英介绍，秘密加入青年团。胡耀邦回乡后，因为能够读书识字，被推举为乡团支部书记，团结乡村支援红军与三省边界革命根据地。1931年，当地乡团暴露，引发军阀赵恒惕的围剿，胡耀邦等人在革命武装的掩护下突围前往中央驻地，而胡耀邦因此留在青年部担任干事。1933年8月，升任青年部部长、兼任宣传部部长。9月正式加入中国工团党。\n\n如今他正式肩负起领导全中国政府的重任，稳定、和平、温和将是他执政的方针。"
  Kang_Shen_DESC:0 "康生，原名张宗可，字少卿（绍卿），生于山东省胶州大台庄当地的一个名门望族，先祖张若獬，崇祯七年进士，南京户部主事，祖父张鸿仪曾为贡生。由于其出生于书香世家，由幼年时代便开始接触文艺作品，因此擅长书法绘画。1924年，张宗可赴上海大学学习，并改名张溶。在大学学习时，担任上海总工会干事、上海大学特支书记。1927年大革命失败后，张宗可出逃海外，在法国的第三国际总部进修。但是在此期间张宗可逐步接受到俄国的布尔什维克思想与英国莫斯利发起的准则派运动的感染，他私下为自己取名康斯坦丁（Константи́н），其中文音译为康生。同样在流亡法国时期，康生被吸纳进入了周恩来领导的特科中，他也假装是中裔俄国人重新回到上海加入革命事业中，在特科的时日内由于其出色的能力，他成功晋升到了特科副手，兼行动科长的地位。"
@@ -1313,6 +1313,11 @@
  HNN_geng_biao_carm_desc:0 "耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，后来全家逃荒奔赴投靠常宁水口山的亲戚，13岁时耿飚为补贴家计在矿厂当敲砂童工。同年冬，水口山矿场在工团代表蒋先云、刘东生、工人代表宋乔生（耿飙舅舅）等人的带领下发动大罢工，工团党长沙代表毛泽东与省长赵恒惕当面对质，在当地矿工的顽强斗争下，大罢工取得辉煌胜利。省政府不得不修建工人子弟学校，耿飙也因此重新开始上学。次年，赵恒惕派兵镇压水口山工人俱乐部，与工人发生交火，再次被工人赶跑。1925年，耿飙加入青年团。1926年水口山工人组织在工团党代表何叔衡的领导下组织武装部队，配合国民党北伐军。\n\n大革命失败后，水口山工人武装重新便入三区根据地，是根据地早期最精锐的力量。耿飚则以工人身份为掩护，在浏阳、平江一带组建农民赤卫队。1927年参与醴陵暴动，率赤卫队夜袭团防局，缴获十二支汉阳造，暴动失败后与组织失去联系，耿飙等人在湘东组建游击队。同年正式加入工团党。此后历任团长、师副参谋、师参谋长等职务，是红军的重要领导人。"
  HNN_Lin_Bo_Qu: "林伯渠" 
  POLITICS_HNN_LIN_Bo_Qu_DESC:0 "林伯渠生于湖南省临澧县修梅镇凉水井村，其父林鸿仪为晚清禀生。1902年考入湖南公立西路师范学堂，1904年官费留学日本早稻田大学攻读经济学。1905年加入同盟会，参加辛亥革命。1920年任孙中山大元帅府参议期间，经李大钊介绍接触工团主义思想。\n\n1926年任国民革命军第六军党代表兼政治部主任，参与北伐战争。大革命失败后秘密转入地下，利用其财政专长在上海为工团党筹措经费。1931年进入湖南三省边界根据地，主持建立苏区财政体系，首创「竹签代币」解决银元短缺问题。\n\n作为根据地「钱袋子」，他制定累进税制保障红军供给，同时通过白区关系网建立秘密贸易线，用桐油、茶叶从汉口换回药品和军火。其发明的「四联单」物资管理制度，使有限资源在逐次反围剿中发挥最大效能。这位蓄着八字胡的理财专家，用算盘为革命开辟了另一条战线。如今他临危受命担任国家主席，他会依旧以自己的方式将革命进行下去。"
+ HNN_ma_long_cnav:0 "马龙"
+ HNN_chen_bo_da_sec:0 "陈伯达"
+ HNN_chen_bo_da_sec_desc:0 "§Y生于：§!§L1904年7月29日；大清帝国、广东省泉州市惠安县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L陈伯达，1919年考入厦门集美师范学校。1924年到上海，任《厦声报》 驻上海记者，同时在上海大学文学系学习，接触工团主义思想。1925年春回厦门，加入中国国民党，随即赴广州入中山大学文学院。1926年，任国民党汕头市党部秘书。在此认识同乡、时驻汕头国民革命军独立团团长张贞，当上张贞的秘书。北伐战争开始，张贞团攻下福州，扩编为国民革命军独立第四师，张贞任师长，陈伯达任师长秘书，福州军事干部学校政治教官，少校军衔。北伐战争失败后，陈伯达逃亡上海，加入中国工团党。后被安排秘密前往法国巴黎学习，结识同样身处巴黎的周恩来、张宗可等人，思想随之激进化，他认为正是工团主义思想的怯懦导致了大革命的失败。§!"
+ HNN_zhao_zi_yang_eco:0 "赵紫阳"
+ HNN_zhao_zi_yang_eco_desc:0 "§Y生于：§!§L1919年10月17日；大清帝国、河南省滑县§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L赵紫阳，原名赵修业1919年10月17日生于河南滑县桑村乡赵庄。父亲赵廷宾，字良乡，又名秋喜，家中有数十亩田地，是当地的一位地主，但平日乐善好施，得村民爱戴；他与发妻刘氏得一子，取名赵修业。1927年，赵紫阳进入位于桑村乡的县立第十七小学读书。1932年6月在桑村小学的一间简陋的教室里宣誓加入中国工青团，后由于工团党准备的夏季滑县暴动和其他起义遭镇压，地下党组织解散，赵修业与组织失去联系。1933年夏天，赵成功考取开封的省立初级中学（今开封高中），中学时期，他成绩优异，多次获得校方颁发的奖学金。上海起义爆发时，赵及其同学在开封呼吁。1936年，赵考入武昌高级中学。在武汉，他将自己的名字改为紫阳。并重新与在湖南的党组织取得联系，恢复党员身份。在工团党的革命胜利前，赵紫阳便是党内小有名气的中层干部，深受党和人民的信任。§!"
 
  CHI_su_yu: "粟裕"
  HNN_su_yu_cos: "粟裕"
@@ -1440,6 +1445,10 @@
  HNN_revolutionary_naval_industry_3:0 "革命海军工业计划"
  HNN_revolutionary_naval_industry_4:0 "革命海军工业计划"
  HNN_continental_marines:0 "海军陆战队"
+ HNN_attack_fed_SZC_idea:0 "推翻四川反革命政府"
+ HNN_attack_fed_YUN_idea:0 "推翻云南反革命政府"
+ HNN_attack_fed_GXC_idea:0 "推翻两广反革命政府"
+ HNN_attack_fed_QIE_idea:0 "推翻满清反革命政府"
 
  HNN_tu_di_gai_ge_hunan_category:0 "土地革命"
  HNN_tu_di_gai_ge_hunan_category_desc:0 "湖南省的革命第一步一定是土地革命，地主阶级的土地所有制将被彻底消灭，取而代之的是广大农民翻身成为土地的主人，农村生产力得到将得到极大解放。\n\n§g当湖南省的土地改革结束后，你将得到工厂与政治点数作为回报，与此同时，全国统一后的土地改革进度也会得到提升。§!"
@@ -1813,9 +1822,9 @@
 
  #TT
  HNN_ji_quan_tot:0 "§R极权派§!支持度将上升"
- HNN_zheng_tong_tot:0 "§M正统派§!支持度将上升"
- HNN_ji_guan_tot:0 "§r技官派§!支持度将上升"
- HNN_shi_chang_tot:0 "§Y市场派§!支持度将上升"
+ HNN_zheng_tong_tot:0 "§j正统派§!支持度将上升"
+ HNN_ji_guan_tot:0 "§l技官派§!支持度将上升"
+ HNN_shi_chang_tot:0 "§m市场派§!支持度将上升"
  HNN_ju_jue_tooltip:0 "§G如果你想让特科政变就选这个§!"
  HNN_people_community_tt:0 "§L这是一项前无古人，后无来者的壮举§!"
  HNN_factory_change_tt:0 "§Y解锁一个新的工业公司§!"
@@ -1825,7 +1834,7 @@
  HNN_totalist_party_proc:0 "极权派"
  HNN_totalist_party_proc_long:0 "极权派(Communist faction)\n§g极权派是中国工团党内的一群极左分子，甚至于相当一部分成员是马克思主义者。他们追忆俄国布尔什维克失败的革命，赞同英国奥斯瓦尔德·莫斯利所倡导的准则派改革，他们认为一个上下一致的党指挥的社会主义国家才是无产阶级革命的正路。而非现在广为流行的英法工团思想，他们认为工团组织结构过于零散，即便是拥有了政权，面对反对分子的攻击也难以长久。在革命暂时胜利的当下他们呼吁建立起一个极权主义国家，他们的领袖邓小平对于当前党内争议不休的市场问题感到疑惑，和因为权力流失到反革命手中相比，这不过是一个小问题。即便是真的像市场派倡导的那样进行市场化，只要权力足够集中，有形的手就能操作无形的手，就不需要担心资本家荼毒人民。§!"
  HNN_syndicalist_party_proc:0 "正统派"
- HNN_syndicalist_party_proc_long:0 "正统派(legitimism faction)\n§g正统派并非大革命时期的由李立三等人主张的和国民党妥协的派系，他们是旧的激进派的延续。\n\n正统派认为在新中国成立之后主张政府应该采取绝对的反资本主义态度，不同意党内由董必武、习仲勋、薄一波等人推行的“有市场”的社会主义改良路线，认为这样实际上是让人民受二道苦，是让资本家卷土重来再次剥削人民。倘若实行这样的路线那么革命意义何在？\n\n同时正统派中的不少人与极权派有着不少来往，尽管经济问题问题上他们分歧颇多。但在政治上，他们都认为一个松散的联盟在英法也许行得通，而在中国这样落后的第三世界国家是绝对行不通的，没有一个大政府就意味着像孙中山与袁世凯那般，将革命果实拱手让人。\n\n而正统派内部也并不融洽，两位领袖高岗和刘少奇之间的隔阂颇深，党内高层一直猜测倘如他二人其中一位当选国家主席，必定会对另一位出手...§!"
+ HNN_syndicalist_party_proc_long:0 "正统派(legitimism faction)\n§g正统派并非大革命时期的由李立三等人主张的和国民党妥协的派系，他们是旧的激进派的延续。\n\n正统派认为在新中国成立之后主张政府应该采取绝对的反资本主义态度，不同意党内由董必武、习仲勋、薄一波等人推行的“有市场”的社会主义改良路线，认为这样实际上是让人民受二道苦，是让资本家卷土重来再次剥削人民。倘若实行这样的路线那么革命意义何在？\n\n同时正统派中的不少人与极权派有着不少来往，尽管经济问题问题上他们分歧颇多。但在政治上，他们都认为一个松散的联盟在英法也许行得通，而在中国这样落后的第三世界国家是绝对行不通的，没有一个大政府就意味着像孙中山与袁世凯那般，将革命果实拱手让人。\n\n同时正统派内部也并不融洽，两位领袖高岗和刘少奇之间的隔阂颇深，党内高层一直猜测倘如他二人其中一位当选国家主席，必定会对另一位出手...§!"
  HNN_radical_socialist_party_proc:0 "技官派"
  HNN_radical_socialist_party_proc_long:0 "技官派(technical officer faction)\n§g技官派是由周恩来、陈云所领导的一股工团党势力，他们主张放下党争，放下路线间的争论，全党全力发展科技。他们认为中国革命在解放全国之后当前的主要事业是培养一批“又红又专”的技术人才，使得各行各业实行“专家专管”。\n\n中国目前的问题就在于科技的落后，生产力的落后，不改变这个问题只是改变经济政策方向是无济于事的，他们认为正统派的思想过于激进，如果按照他们的设想即便建立了一个社会主义国家也只会是一个贫穷的国家。他们质问到“难道我们的人民不能过上好日子吗？”。而市场派的思想又过于鱼龙混杂，在他们的规划中实在难以看清他们讲究站在哪一方，他们设想的国家还是社会主义吗？他们质问市场派“把资本家们全部请回来的用意是什么？难道人民还要受二道苦吗？还对得起为革命牺牲的将士们吗？”至于极权派，事实上很难说清他们和极权派的人是否其实思想方向趋同？§!"
  HNN_social_democrat_party_proc:0 "市场派"
@@ -1987,38 +1996,38 @@
  HNN_si_da_zi_yo2_desc:0 "大鸣！大放！大辩论！大字报！"
  HNN_si_da_zi_yo3:0 "自由的愿景"
  HNN_she_hui_bao_zhang:0 "社会保障"
- HNN_she_hui_bao_zhang_desc:0 "贫穷不是社会主义"
+ HNN_she_hui_bao_zhang_desc:0 "贫穷不是社会主义，社会主义要消灭贫穷。不发展生产力，不提高人民的生活水平，不能说是符合社会主义要求的。"
  HNN_she_hui_bao_zhang2:0 "社会保障"
- HNN_she_hui_bao_zhang2_desc:0 "贫穷不是社会主义"
+ HNN_she_hui_bao_zhang2_desc:0 "贫穷不是社会主义，社会主义要消灭贫穷。不发展生产力，不提高人民的生活水平，不能说是符合社会主义要求的。社会主义的本质，是解放生产力，发展生产力，消灭剥削，消除两极分化，最终达到共同富裕。"
  HNN_she_hui_bao_zhang3:0 "社会保障"
- HNN_she_hui_bao_zhang3_desc:0 "贫穷不是社会主义"
+ HNN_she_hui_bao_zhang3_desc:0 "贫穷不是社会主义，社会主义要消灭贫穷。不发展生产力，不提高人民的生活水平，不能说是符合社会主义要求的。社会主义的本质，是解放生产力，发展生产力，消灭剥削，消除两极分化，最终达到共同富裕。社会主义的特点不是穷，而是富，但这种富是人民共同富裕。"
  HNN_qing_nian_tuan:0 "社会主义青年团"
  HNN_qing_nian_tuan_desc:0 "青年兴则国家兴，青年强则国家强，青年有信仰则国家有信仰"
  HNN_half_Social_economy5:0 "市场经济"
- HNN_half_Social_economy5_desc:0 "不管黑猫白猫，能捉到老鼠就是好猫"
+ HNN_half_Social_economy5_desc:0 "不管黑猫白猫，能捉到老鼠就是好猫。"
  HNN_half_Social_economy6:0 "市场经济"
- HNN_half_Social_economy6_desc:0 "不管黑猫白猫，能捉到老鼠就是好猫"
+ HNN_half_Social_economy6_desc:0 "不管黑猫白猫，能捉到老鼠就是好猫。"
  HNN_ming_zhu_ping_deng:0 "民族平等"
  HNN_tu_gai_1:0 "土地改革:§R严重失败§!"
- HNN_tu_gai_1_desc:0 "我们搞砸了"
+ HNN_tu_gai_1_desc:0 "§R我们搞砸了§!"
  HNN_tu_gai_2:0 "土地改革:§R终获失败§!"
- HNN_tu_gai_2_desc:0 "我们搞砸了"
+ HNN_tu_gai_2_desc:0 "§R我们搞砸了§!"
  HNN_tu_gai_3:0 "土地改革:§R勉勉强强§!"
- HNN_tu_gai_3_desc:0 "我们没有搞砸，但既没有得到贫农们的认可，也没有取悦到地主们，所有人都对现状不满。"
+ HNN_tu_gai_3_desc:0 "我们完成了土地改革，但其成果既没有得到贫农们的认可，也没有取悦到地主们，所有人都对现状不满。我们做了，但又似乎什么都没有改变。"
  HNN_tu_gai_4:0 "土地改革:§R差强人意§!"
- HNN_tu_gai_4_desc:0 "我们没有搞砸，但既没有得到贫农们的认可，也没有取悦到地主们，所有人都对现状不满。"
+ HNN_tu_gai_4_desc:0 "我们完成了土地改革，但其成果既没有得到贫农们的认可，也没有取悦到地主们，所有人都对现状不满。我们作乱，但这只好于我们什么都没有做。"
  HNN_tu_gai_5:0 "土地改革:§R皆大欢喜§!"
- HNN_tu_gai_5_desc:0 "我们的改革大受欢迎，农民们都在赞扬我们的新政府"
+ HNN_tu_gai_5_desc:0 "拍巴掌唱小调，又有棉花又有稻。又有花生蚕豆六谷(玉米)泡，土地改革人人笑。"
  HNN_tu_gai_6:0 "土地改革:§R大获成功§!"
- HNN_tu_gai_6_desc:0 "我们的改革大受欢迎，农民们都在赞扬我们的新政府"
+ HNN_tu_gai_6_desc:0 "擘擘拍擘擘拍，自己土地自种又自得，塘里鱼肥如白雪，园里青莱瓜豆吃不撤，爷爷奶奶对我说：多亏土地改了革。"
  HNN_tu_gai_7:0 "土地改革:§R试图挽回§!"
- HNN_tu_gai_7_desc:0 "我们搞砸了，但是我们需要挽回失败的情况"
+ HNN_tu_gai_7_desc:0 "我们搞砸了，但是我们需要挽回失败的情况。"
  HNN_tu_gai_8:0 "土地改革:§R试图挽回§!"
- HNN_tu_gai_8_desc:0 "我们搞砸了，但是我们需要挽回失败的情况"
+ HNN_tu_gai_8_desc:0 "我们搞砸了，但是我们需要挽回失败的情况。"
  HNN_tu_gai_9:0 "土地改革:§R信誉重生§!"
- HNN_tu_gai_9_desc:0 "我们搞砸了，但是农民们已经开始准备原谅我们"
+ HNN_tu_gai_9_desc:0 "我们搞砸了，我们正在挽回这一切，而农民们已经开始准备原谅我们。"
  HNN_tu_gai_10:0 "土地改革:§R热情高涨§!"
- HNN_tu_gai_10_desc:0 "我们搞砸了，但是农民们已经原谅了我们，并将在生产中投入更高的热情"
+ HNN_tu_gai_10_desc:0 "我们搞砸了，但是我们成功挽救了这一切，如今农民们已经原谅了我们，并重新对我们的党和政府充满信任，他们将在生产中投入更高的热情。"
  HNN_red_navy_idea:0 "海军计划"
  HNN_autonomous_region:0 "少数民族自治区"
  HNN_peoples_commune:0 "人民公社"
@@ -2089,7 +2098,7 @@
  HNN_jiao_yu3:0 "工农夜校"
  HNN_jiao_yu3_desc:0 "工人、农民是社会的中坚力量，但没有受教育的机会，没有文化知识，要唤醒他们的觉悟，就应帮助他们学习文化知识。"
  HNN_chou_jian_zhong:0 "筹建人民公社"
- HNN_chou_jian_zhong_desc:0 "人民公社的特点：“一曰大，二曰公”。它的好处是：可以把工、农、商、学、兵合在一起，便于领导。人民公社’前面可以加上地名，或者加上群众喜欢的名字。"
+ HNN_chou_jian_zhong_desc:0 "人民公社的特点：“一曰大，二曰公”。它的好处是：可以把工、农、商、学、兵合在一起，便于领导。人民公社前面可以加上地名，或者加上群众喜欢的名字。"
  HNN_ge_ming_de_da_zong:0 "革命属于大众"
  HNN_ge_ming_de_da_zong2:0 "革命属于大众"
  HNN_ge_ming_de_da_zong3:0 "革命属于大众"
@@ -2100,9 +2109,6 @@
  HNN_ping_eng_jing_ji:0 "中德贸易"
  HNN_war_to_RUS:0 "中德对俄战争"
  HNN_new_order:0 "新秩序"
- HNN_attack_fed_SZC_idea:0 "推翻四川反革命政府"
- HNN_attack_fed_YUN_idea:0 "推翻云南反革命政府"
- HNN_attack_fed_GXC_idea:0 "推翻两广反革命政府"
  HNN_jing_shen_si_jieB:0 "外景"
  HNN_jing_shen_si_jieC:0 "内景"
  HNN_casc:0 "航空航天局"
@@ -5151,7 +5157,7 @@
  HNN_fen_hui_di_qi_desc:0 "烈焰翻腾，火光映天，贺龙率众杀入地主庄院，群贼呐喊震地，斩门破户，如风卷残云。高堂之上，账房狼藉，柜中契书堆积如山，尽是地主盘剥血汗，生生压在人身上的枷锁。贺龙拔刀在手，厉声喝道：“此物不焚，何以平怨？此纸不灭，何以雪恨？”众人齐应，怒火滔天，将那一卷卷地契夺出堂前，堆作高垒，烈火引燃，霎时红光炽盛，黑烟冲天。地主跪伏哭号，然群贼不顾，唯有贫农仰天大笑，奋力将锁魂之契投入火海。火舌翻卷，将一字一墨吞噬殆尽，契书化灰，枷锁尽断。烈焰中，风雷震动，仿若天神怒目，昭告世间：旧秩序已焚，新天地将启！"
  HNN_zheng_bian_yi_qie_li_liang:0 "各路英雄齐聚义，"
  HNN_zheng_bian_yi_qie_li_liang_desc:0 "四方云动，妖氛弥漫，各路神兵自四野而来，皆奉天命，聚于贺龙旗下。旌旗招展，号令如雷，刀枪错落，战甲森然。贺龙端坐中军，环视众将，朗声道：“天运已至，众神谕令杀劫，假灵乱世，贼寇横行，唯有刀兵可定乾坤！”"
- HNN_zhu_mie_wan_mo:0 "诛灭万魔天地喜。"
+ HNN_zhu_mie_wan_mo:0 "诛灭万魔天地欢。"
  HNN_zhu_mie_wan_mo_desc:0 "妖匪声言天下多劫，真主现已降世，只因世界不静，真主不能登基，各神假灵，叫我杀贼，我们打单不单双，早打寅卯，晨打申酉戌。纵火劫掠，焚庙毁经，言道真空家乡皆为空谈，唯有血与火可证天命。妖匪聚众喧嚣，呼号神谕昭然，然世间浑浊，万物未定，真主难现，唯斩尽贼魁，方可荡涤污秽。是以刀枪不息，昼夜不停，昨日寅卯，今日申酉戌，明朝复有劫数，人间仍是杀场。"
  HNN_lem_shui_pao_cha:0 "冷水泡茶慢慢浓，"
  HNN_lem_shui_pao_cha_desc:0 "贺龙最初收编的残兵是将这一切的暴动转化的革命的工具，他需要这些人，让这些人去和那些神兵中做教育，分化那些依旧顽固的神兵领袖，将那些出身资产阶级如今依旧反动的分割出现，而让那些出身贫苦的神兵士兵们了解革命的道路究竟在哪里，神佛是无法拯救中国拯救他们自己的。这第一步就是组建农会，组建基层党组织，将那些信仰并不坚定的神兵们发展为我们的党员。"
@@ -5182,7 +5188,7 @@
  hnnshenbing.4.d:0 "并非所有的神兵都是叛贼，高罗最初的一伙神兵是1920年开始兴起的，后来还和黑洞的王锡九一伙有火并，被剿灭后，当地一个名叫李飞瞎子的自称是某某神仙下凡，在庙里给人画符水，收编了这支神兵，又得到了当地豪绅、地主的支持，由李飞瞎子和他的弟子杨雪海组织了起了新神兵，又号义勇队，大队长杨学海，辖高罗、朝阳、李溪、新安等四个乡。于当年五月至年底，扎营于挨山村老察上的徐、廖二宅，常驻在此的有一百多人。神兵给养由各士豪筹集，即各士豪的田地在哪个保，就由这个保的保长找该士豪筹捐。如黎台成、黎清成、杨鹏程等土豪在六保有田士，就由六保保长找他们筹捐。改称“义勇队”以后，还得到了县政府拨予的给养。"
  hnnshenbing.4.a:0 "这是个好办法"
  hnnshenbing.5.t:0 "审判"
- hnnshenbing.5.d:0 "乾善坤看着自己宝贝的大花马被人牵走，恶狠狠地盯着收走自己双刃宝剑的那个小鬼，将平生最恶劣的脏词都宣泄在了押送他的红军士兵上，在这群小鬼还在娘胎里头他乾善坤就在是行走天下的好汉了。菩萨保佑，他的傲气不允许他对这群小兔崽子低头。\n\n不过即使他骂得再别出心裁，也没有人回应他，于是乾善坤即便脾气再暴躁骂了一个时辰后也骂累了，只得乖乖跟着红军走。\n\n突然，只见前方一排人站着，同自己一样戴着镣铐脚铐，乾善坤大吃一惊，只见四面八方有名有姓的神兵头子、袍哥好汉都来了，第一个就是那宣恩高罗的李飞瞎子和他的徒弟杨云海，他带着手下给那土豪做打手，赚的盆满钵满。旁边是“苗王”龙云飞，也是道上赫赫有名的好汉，当然了那肯定比不起贺胡子。一转头，只见远处走来十几个年轻士兵，每人手上拿一把枪。\n\n还没等他反应过来，乾善坤就被押到和其他人一排，接着和其他人一样呗按着跪下来。\n\n一排黑洞洞的枪口对着他们。\n\n乾善坤意识到怎么回事了，他大吼着："
+ hnnshenbing.5.d:0 "乾善坤看着自己宝贝的大花马被人牵走，恶狠狠地盯着收走自己双刃宝剑的那个小鬼，将平生最恶劣的脏词都宣泄在了押送他的红军士兵上，在这群小鬼还在娘胎里头他乾善坤就在是行走天下的好汉了。菩萨保佑，他的傲气不允许他对这群小兔崽子低头。\n\n不过即使他骂得再别出心裁，也没有人回应他，于是乾善坤即便脾气再暴躁骂了一个时辰后也骂累了，只得乖乖跟着红军走。\n\n突然，只见前方一排人站着，同自己一样戴着镣铐脚铐，乾善坤大吃一惊，只见四面八方有名有姓的神兵头子、袍哥好汉都来了，第一个就是那宣恩高罗的李飞瞎子和他的徒弟杨云海，他带着手下给那土豪做打手，赚的盆满钵满。旁边是“苗王”龙云飞，也是道上赫赫有名的好汉，当然了那肯定比不起贺胡子。一转头，只见远处走来十几个年轻士兵，每人手上拿一把枪。\n\n还没等他反应过来，乾善坤就被押到和其他人一排，接着和其他人一样被按着跪了下来。\n\n一排黑洞洞的枪口对着他们。\n\n乾善坤意识到怎么回事了，他大吼着："
  hnnshenbing.5.a:0 "“贺云卿，我是你结拜兄弟啊！”"
  hnnshenbing.6.t:0 "一心一意"
  hnnshenbing.6.d:0 "贺龙将军是穷人的救星，这在湘鄂西的乡亲们心里，早就是铁打的事实。\n\n施白心原是个穷苦汉，祖祖辈辈刨地讨饭，日子过得比黄泥巴还苦。地主老财压榨，兵匪乱抢，连口热乎饭都是奢望。他恨透了这世道，可穷人能咋办？光恨不顶饱，光骂不管用。\n\n后来，贺龙带着神军来了，杀土豪，分田地，还把穷人当亲人看待。施白心头一回吃上红军的饭，烫嘴的红薯、喷香的苞谷粥，让他眼泪汪汪。他心里像锻铁一样，烧得通红，打得坚硬：这日子跟着贺龙才有盼头！\n\n地主恶霸说：“贺龙就是红匪，迟早让官军剿灭！”施白心冷笑：“要剿也该先剿你们这些吸血虫！”亲戚劝：“造反哪有好下场？”施白心一挥拳头：“不反，咱一辈子就这样跪着活！”\n\n他扔下破锄头，提起大刀，跟着贺龙上了战场。从泥腿子到红军战士，他在枪林弹雨里拼杀，把命都押在了这条翻身路上。贺龙说：“为穷人打天下，不怕苦，不怕死！”施白心点头：“我铁了心，死也不回头！”"
