--- a/localisation/QD_traits_l_simp_chinese.yml
+++ b/localisation/QD_traits_l_simp_chinese.yml
@@ -1,5 +1,8 @@
 ﻿l_simp_chinese:
- left_writer: "泛左联成员"
+ left_writer: "§r泛左联成员§!"
+ market_right: "§m市场派§!"
+ tot_right: "§R极权派§!"
+ tech_right: "§l技官派§!"
 
  KR_regional_traditionalist_leader: "地区传统派领袖"
  KR_head_of_intelligence: "间谍首脑"
