--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -124,6 +124,7 @@
  HNN_Chen_Yun_hog:0 "陈云"
  HNN_mao_ze_dong:0 "毛泽东"
  HNN_Mao_Ze_Dong_eco:0 "毛泽东"
+ HNN_Mao_Ze_Dong_eco_2:0 "毛泽东"
  HNN_Mao_Ze_Dong_hog:0 "毛泽东"
  HNN_Zhou_En_Lai_hog:0 "周恩来"
  HNN_Gao_Gang_hog:0 "高岗"
@@ -134,24 +135,28 @@
  HNN_Ye_Jian_Ying_hog:0 "叶剑英"
  HNN_Den_Xiao_Ping_hog:0 "邓小平"
  HNN_Chen_Yi_for:0 "陈毅"
+ HNN_Chen_Yi_for_2:0 "陈毅"
  HNN_Zhou_En_Lai_for:0 "周恩来"
  HNN_li_wei_han_for:0 "李维汉"
+ HNN_li_wei_han_for_2:0 "李维汉"
  HNN_tang_xiangming_hog:0 "汤芗铭"
  HNN_shi_ding_wu_hog:0 "石顶武"
  HNN_shi_tai_xu_hog:0 "太虚法师"
  HNN_Rong_Yi_Ren_eco:0 "荣毅仁"
  HNN_xiao_ke_sec:0 "萧克"
+ HNN_xiao_ke_sec_2:0 "萧克"
  HNN_shen_cong_wen_sec:0 "沈从文"
- HNN_Shang_Kun_sec:0 "杨尚昆"
  HNN_ren_bishi_sec:0 "任弼时"
+ HNN_ren_bishi_sec_2:0 "任弼时"
  HNN_luo_yi_nong_sec:0 "罗亦农"
  HNN_shi_tai_xu_sec:0 "太虚法师"
  HNN_Qiu_Hui_Zuo_sec:0 "邱会作"
- HNN_Li_Xian_Nian_eco:0 "李先念"
+ HNN_wu_fa_xian_eco:0 "吴法宪"
+ HNN_li_zuo_peng_eco:0 "李作鹏"
+ HNN_huang_yong_shen_eco:0 "黄永胜"
  HNN_Chen_Yun_eco:0 "陈云"
- HNN_Li_Fu_Chun_eco:0 "李富春"
+ HNN_Chen_Yun_eco_2:0 "陈云"
  HNN_hua_luo_geng_eco:0 "华罗庚"
- HNN_Bo_Yi_Bo_eco:0 "薄一波"
  HNN_shi_yin_shun_eco:0 "印顺法师"
  HNN_chen_quzhen:0 "陈渠珍"
  HNN_yuan_zuming:0 "袁祖铭"
@@ -159,6 +164,7 @@
  HNN_zhou_xicheng:0 "周西成"
  HNN_tang_shengming:0 "唐生明"
  HNN_tao_zhiyue:0 "陶峙岳"
+ HNN_rao_shu_shi_for:0 "饶漱石"
  HNN_Xia_Dou_Ying:0 "夏斗寅"
  
  HNN_shi_qi_gui_sec:0 "石启贵"
@@ -194,6 +200,7 @@
  HNN_huang_gonglue_sec: "黄公略"
  HNN_huang_gong_lue_cos: "黄公略"
  HNN_huang_gonglue_sec_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§R第八军激进派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
+ HNN_huang_gonglue_sec_2_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
  HNN_huang_gong_lue_cos_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§R第八军激进派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
  HNN_he_yaozu: "贺耀祖" 
  POLITICS_HNN_HE_YAOZU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1889年5月8日，大清帝国 湖南省 宁乡县§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g贺耀祖生于一户富裕人家，曾在贺氏家族学校接受私塾教育，后来又入学玉潭书院。他先是就读于湖南陆军小学第一期，后来又进入武昌陆军第三中学，毕业后因表现优异被送往日本陆军士官学校学习。在那里，贺耀祖加入了同盟会，并参加了辛亥革命。在黄兴的建议下，他回到日本继续深造，并于1916年回国参与了孙中山领导的一系列革命运动。\n\n次年，贺耀祖加入了赵恒惕领导的湘军，并在六年内稳步晋升，从团长一路晋升到师长。然而贺耀祖却在北伐战争期间加入国民党，尽管及时的脱身使其最终免遭北伐失败所带来的巨大政治影响。贺耀祖虽才华横溢，但过往的叛变经历使其难以晋升地方高层——不过他仍是湖南省参谋部的重要成员。§!"
@@ -321,11 +328,11 @@
  HNN_tou_zi_ji_chu_jian_she_desc:0 "§G我们需要清理出一片区域用来修建工厂。§!" 
  HNN_tou_zi_gong_chang:0 "投资工业建设"
  HNN_he_liang_guang_jun_fa_tan_pan:0 "与新桂系军阀合作"
- HNN_he_liang_guang_jun_fa_tan_pan_desc:0 "令人惊喜的是李宗仁在广州也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都对工团主义恨之入骨，想要开除汪精卫的党籍，我们一定有很多共同语言。!" 
+ HNN_he_liang_guang_jun_fa_tan_pan_desc:0 "令人惊喜的是李宗仁在广州也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都对工团主义恨之入骨，想要开除汪精卫的党籍，我们一定有很多共同语言。"
  HNN_he_yun_nan_jun_fa_tan_pan:0 "与云南国民党人合作"
- HNN_he_liang_guang_jun_fa_tan_pan_desc:0 "令人惊喜的是朱培德在云南也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都对工团主义恨之入骨，想要开除汪精卫的党籍，我们一定有很多共同语言。!" 
- HNN_he_yun_nan_jun_fa_tan_pan_1:0 "与云南农工党合作"
- HNN_he_yun_nan_jun_fa_tan_pan_1_desc:0 "令人惊喜的是农工党在云南成功夺取了权力，他们曾与我们有着密切来往，更何况我们都想要以社会主义解放中国，尽管我们有着诸多分歧，但在当下，一切都是可以谈判修改的。!" 
+ HNN_he_liang_guang_jun_fa_tan_pan_desc:0 "令人惊喜的是朱培德在云南也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都对工团主义恨之入骨，想要开除汪精卫的党籍，我们一定有很多共同语言。"
+ HNN_he_yun_nan_jun_fa_tan_pan_1:0 "与云南左翼合作"
+ HNN_he_yun_nan_jun_fa_tan_pan_1_desc:0 "令人惊喜的是朱德在云南成功夺取了权力，他们曾与我们有着密切来往，更何况我们都想要以社会主义解放中国，尽管我们有着诸多分歧，但在当下，一切都是可以谈判修改的。"
  HNN_he_liang_guang_jun_fa_tan_pan_1:0 "与两广合作"
  HNN_he_liang_guang_jun_fa_tan_pan_1_desc:0 "令人惊喜的是两广的人民在广州也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都想要以社会主义解放中国，尽管我们有着诸多分歧，但在当下，一切都是可以谈判修改的。"
  HNN_he_dong_tu_Jue_si_tam_tan_pan:0 "与东突厥斯坦民族军合作"
@@ -643,11 +650,25 @@
  HNN_mao_ze_dong_effect: "§Y土地改革相关的决议§!增强"
  HNN_mao_ze_dong_add_tooltip:0 "使$HNN_mao_ze_dong_effect$"
  HNN_mao_ze_dong_helpful_tooltip:0 "§n有毛泽东作为顾问会使$HNN_mao_ze_dong_effect$§!"
- HNN_mao_ze_dong_is_helpful_tooltip:0 "§G毛泽东在我们的政府中工作会$HNN_mao_ze_dong_effect$§!"
+ HNN_mao_ze_dong_is_helpful_tooltip:0 "§G毛泽东在我们的政府中工作会$HNN_mao_ze_dong_add_tooltip$§!"
  HNN_song_xilian_effect: "§Y国民党青年相关的决议§!增强"
  HNN_song_xilian_add_tooltip:0 "使$HNN_song_xilian_effect$"
  HNN_song_xilian_helpful_tooltip:0 "§n有宋希濂作为顾问会使$HNN_song_xilian_effect$§!"
  HNN_song_xilian_is_helpful_tooltip:0 "§G宋希濂在我们的政府中工作会$HNN_song_xilian_add_tooltip$§!"
+ HNN_tot_effect: "§Y极权派相关效果§!增强"
+ HNN_tot_add_tooltip:0 "使$HNN_tot_effect$"
+ HNN_yang_shang_kun_helpful_tooltip:0 "§n有杨尚昆作为顾问会使$HNN_tot_effect$§!"
+ HNN_yang_shang_kun_is_helpful_tooltip:0 "§G杨尚昆在我们的政府中工作会$HNN_tot_add_tooltip$§!"
+ HNN_rong_yi_ren_helpful_tooltip:0 "§n有荣毅仁作为顾问会使$HNN_tot_effect$§!"
+ HNN_rong_yi_ren_is_helpful_tooltip:0 "§G荣毅仁在我们的政府中工作会$HNN_tot_add_tooltip$§!"
+ HNN_tech_effect: "§Y技官派相关效果§!增强"
+ HNN_tech_add_tooltip:0 "使$HNN_tech_effect$"
+ HNN_guo_mo_ruo_helpful_tooltip:0 "§n有郭沫若作为顾问会使$HNN_tech_effect$§!"
+ HNN_guo_mo_ruo_is_helpful_tooltip:0 "§G郭沫若在我们的政府中工作会$HNN_tech_add_tooltip$§!"
+ HNN_rang_ming_de_effect: "§Y川康铁路相关的决议§!增强"
+ HNN_rang_ming_de_add_tooltip:0 "使$HNN_rang_ming_de_effect$"
+ HNN_rang_ming_de_helpful_tooltip:0 "§n有穰明德作为顾问会使$HNN_rang_ming_de_effect$§!"
+ HNN_rang_ming_de_is_helpful_tooltip:0 "§G穰明德在我们的政府中工作会$HNN_rang_ming_de_add_tooltip$§!"
 
  modifier_army_sub_unit_irregular_max_org_factor_tooltip:0 "$modifier_army_sub_unit_irregular_infantry_max_org_factor$：$RIGHT|+=%2$"
  modifier_army_sub_unit_irregular_attack_factor_tooltip:0 "$modifier_army_sub_unit_irregular_infantry_attack_factor$：$RIGHT|+=%2$"
@@ -1282,7 +1303,6 @@
  POLITICS_HNN_YE_JIAN_YING_DESC:0 "叶剑英1919年毕业于云南军校，同年加入国民党。在“六一六”事变期间，他站在孙中山一边，公开与陈炯明在广州的势力作战，并帮助孙中山逃离广州。他是建立黄埔军校的主要参与者之一，并在那里教书。曾任师长，参加过北伐战争与镇压广州商团的行动。国民革命军失败后，叶剑英回到广东，加入中国工团党。尽管理论上叶剑英应该和广州商团完全敌视，但事实上，二者的关系相当不错。这也让他对于经济建设工作有了别样的思考..."
  POLITICS_HNN_MAO_ZHE_DONG_DESC:0 "毛泽东生于湖南湘潭韶山冲，幼年入私塾读书，曾务农。1918年4月14日，新民学会在蔡和森家中成立，萧子昇为总干事，毛泽东为干事；不久萧子昇赴法国勤工俭学，会务由毛泽东主持。同年10月，经恩师杨昌济介绍，毛泽东认识了时任北京大学图书馆主任，日后的革命家李大钊，李大钊安排他当了月薪8元的图书馆书记。1920年底，毛泽东先后参与组建长沙社会主义小组和长沙社会主义青年团。1921年，毛泽东出席参与中国工团党第一次代表大会，建立中国工团党。\n\n两党合作之后，毛泽东一度担任国民党上海执行部组织部秘书、代理宣传部长，1926年入选国民党中央执行委员会委员。同年由于北伐战争的失败，对革命丧失信心的毛泽东改名换姓重新返回了他的故乡湖南湘潭在一所私塾中教书躲避军阀赵恒惕的通缉。不过这种失落是短暂的，随着董必武、何叔衡等人在湖南三省边界建立起革命根据地。得到消息的毛泽东第一时间申请加入根据地工作，但是董必武并没有将他留下反而是建议他利用自己教书先生的身份返回长沙做地下工作。在王震的协助下，毛泽东筹建起来被捣毁的长沙支部，任支部书记。他白天在学校教师，晚上办报纸、撰写宣传册、向根据地转发情报。在建国以后，毛泽东担任起了湖南省委书记的重任。\n\n他本以为随着全国统一就能够让中华儿女过上更好的生活，让贫苦的农民摆脱贫困，但他错了。党中央在土地改革才刚刚起步时就宣布了土地改革结束，这种赤裸裸的背叛行为引发了他的反击，如今他成功登上了中国的政治巅峰，他将按照自己的意愿重塑中国的革命。"
  POLITICS_HNN_GAO_GANG_ARMY_DESC:0 ""
- POLITICS_HNN_BO_YI_BO_ARMY_DESC:0 ""
  POLITICS_HNN_HU_YAO_BANG_ARMY_DESC:0 ""
  POLITICS_HNN_LIU_SHAO_QI_ARMY_DESC:0 ""
  HNN_wang_zhen: "王震"
@@ -1308,16 +1328,38 @@
  POLITICS_HNN_XU_SI_YOU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年2月28日，大清帝国 河南省 新县§!\n§Y军旅生涯：§!§g许世友生于新县田铺乡贫农家庭，八岁入少林寺习武，练就一身硬功夫。1921年因路见不平打死地主家丁，被迫流落江湖。1926年加入吴佩孚部队当兵，受北伐军影响秘密接触工团思想。\n\n1927年黄麻起义期间，率少林俗家弟子组成「佛兵连」，用齐眉棍突破城门，正式加入中国工团党。起义失败后，带残部转战大别山区，次年春突破封锁进入湖南平江，与王震游击队会合。\n\n在湘鄂赣根据地期间，将少林拳法与游击战术结合，独创「夜战八式」：破戒斩首、罗汉撞钟、金刚伏魔等招式威震敌胆。在长沙战役中，率「铁头队」用硬气功撞开城门，为彭德怀主力打开通道。因其作战时必先念《往生咒》，被赵恒惕军称为「超度将军」。" 
  HNN_geng_biao: "耿飚" 
  HNN_Geng_Biao_for:0 "耿飚"
+ HNN_Geng_Biao_for_2:0 "耿飚"
  HNN_geng_biao_carm:0 "耿飚"
- POLITICS_HNN_GENG_BIAO_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1909年8月26日，大清帝国 湖南省 醴陵县§!\n§Y军旅生涯：§!§g耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，后来全家逃荒奔赴投靠常宁水口山的亲戚，13岁时耿飚为补贴家计在矿厂当敲砂童工。同年冬，水口山矿场在工团代表蒋先云、刘东生、工人代表宋乔生（耿飙舅舅）等人的带领下发动大罢工，工团党长沙代表毛泽东与省长赵恒惕当面对质，在当地矿工的顽强斗争下，大罢工取得辉煌胜利。省政府不得不修建工人子弟学校，耿飙也因此重新开始上学。次年，赵恒惕派兵镇压水口山工人俱乐部，与工人发生交火，再次被工人赶跑。1925年，耿飙加入青年团。1926年水口山工人组织在工团党代表何叔衡的领导下组织武装部队，配合国民党北伐军。\n\n大革命失败后，水口山工人武装重新便入三区根据地，是根据地早期最精锐的力量。耿飚则以工人身份为掩护，在浏阳、平江一带组建农民赤卫队。1927年参与醴陵暴动，率赤卫队夜袭团防局，缴获十二支汉阳造，暴动失败后与组织失去联系，耿飙等人在湘东组建游击队。同年正式加入工团党。此后历任团长、师副参谋、师参谋长等职务，是红军的重要领导人。"
+ HNN_geng_biao_bio:0 "耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，后来全家逃荒奔赴投靠常宁水口山的亲戚，13岁时耿飚为补贴家计在矿厂当敲砂童工。同年冬，水口山矿场在工团代表蒋先云、刘东生、工人代表宋乔生（耿飙舅舅）等人的带领下发动大罢工，工团党长沙代表毛泽东与省长赵恒惕当面对质，在当地矿工的顽强斗争下，大罢工取得辉煌胜利。省政府不得不修建工人子弟学校，耿飙也因此重新开始上学。次年，赵恒惕派兵镇压水口山工人俱乐部，与工人发生交火，再次被工人赶跑。1925年，耿飙加入青年团。1926年水口山工人组织在工团党代表何叔衡的领导下组织武装部队，配合国民党北伐军。\n\n大革命失败后，水口山工人武装重新便入三区根据地，是根据地早期最精锐的力量。耿飚则以工人身份为掩护，在浏阳、平江一带组建农民赤卫队。1927年参与醴陵暴动，率赤卫队夜袭团防局，缴获十二支汉阳造，暴动失败后与组织失去联系，耿飙等人在湘东组建游击队。同年正式加入工团党。此后历任团长、师副参谋、师参谋长等职务，是红军的重要领导人。"
+ POLITICS_HNN_GENG_BIAO_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1909年8月26日，大清帝国 湖南省 醴陵县§!\n§Y军旅生涯：§!$HNN_geng_biao_bio$§g"
+ HNN_Geng_Biao_for_desc:0 "§Y生于：§!§L1909年8月26日；大清帝国、湖南省醴陵县§!\n§Y背景：§!§L$HNN_geng_biao_bio$§!"
+ HNN_Geng_Biao_for_2_desc:0 "§Y生于：§!§L1909年8月26日；大清帝国、湖南省醴陵县§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L$HNN_geng_biao_bio$\n\n革命胜利后耿飙受组织上安排负责外交工作。$§!"
  HNN_geng_biao_carm_desc:0 "耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，后来全家逃荒奔赴投靠常宁水口山的亲戚，13岁时耿飚为补贴家计在矿厂当敲砂童工。同年冬，水口山矿场在工团代表蒋先云、刘东生、工人代表宋乔生（耿飙舅舅）等人的带领下发动大罢工，工团党长沙代表毛泽东与省长赵恒惕当面对质，在当地矿工的顽强斗争下，大罢工取得辉煌胜利。省政府不得不修建工人子弟学校，耿飙也因此重新开始上学。次年，赵恒惕派兵镇压水口山工人俱乐部，与工人发生交火，再次被工人赶跑。1925年，耿飙加入青年团。1926年水口山工人组织在工团党代表何叔衡的领导下组织武装部队，配合国民党北伐军。\n\n大革命失败后，水口山工人武装重新便入三区根据地，是根据地早期最精锐的力量。耿飚则以工人身份为掩护，在浏阳、平江一带组建农民赤卫队。1927年参与醴陵暴动，率赤卫队夜袭团防局，缴获十二支汉阳造，暴动失败后与组织失去联系，耿飙等人在湘东组建游击队。同年正式加入工团党。此后历任团长、师副参谋、师参谋长等职务，是红军的重要领导人。"
  HNN_Lin_Bo_Qu: "林伯渠" 
  POLITICS_HNN_LIN_Bo_Qu_DESC:0 "林伯渠生于湖南省临澧县修梅镇凉水井村，其父林鸿仪为晚清禀生。1902年考入湖南公立西路师范学堂，1904年官费留学日本早稻田大学攻读经济学。1905年加入同盟会，参加辛亥革命。1920年任孙中山大元帅府参议期间，经李大钊介绍接触工团主义思想。\n\n1926年任国民革命军第六军党代表兼政治部主任，参与北伐战争。大革命失败后秘密转入地下，利用其财政专长在上海为工团党筹措经费。1931年进入湖南三省边界根据地，主持建立苏区财政体系，首创「竹签代币」解决银元短缺问题。\n\n作为根据地「钱袋子」，他制定累进税制保障红军供给，同时通过白区关系网建立秘密贸易线，用桐油、茶叶从汉口换回药品和军火。其发明的「四联单」物资管理制度，使有限资源在逐次反围剿中发挥最大效能。这位蓄着八字胡的理财专家，用算盘为革命开辟了另一条战线。如今他临危受命担任国家主席，他会依旧以自己的方式将革命进行下去。"
- HNN_ma_long_cnav:0 "马龙"
  HNN_chen_bo_da_sec:0 "陈伯达"
- HNN_chen_bo_da_sec_desc:0 "§Y生于：§!§L1904年7月29日；大清帝国、广东省泉州市惠安县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L陈伯达，1919年考入厦门集美师范学校。1924年到上海，任《厦声报》 驻上海记者，同时在上海大学文学系学习，接触工团主义思想。1925年春回厦门，加入中国国民党，随即赴广州入中山大学文学院。1926年，任国民党汕头市党部秘书。在此认识同乡、时驻汕头国民革命军独立团团长张贞，当上张贞的秘书。北伐战争开始，张贞团攻下福州，扩编为国民革命军独立第四师，张贞任师长，陈伯达任师长秘书，福州军事干部学校政治教官，少校军衔。北伐战争失败后，陈伯达逃亡上海，加入中国工团党。后被安排秘密前往法国巴黎学习，结识同样身处巴黎的周恩来、张宗可等人，思想随之激进化，他认为正是工团主义思想的怯懦导致了大革命的失败。§!"
+ HNN_chen_bo_da_sec_desc:0 "§Y生于：§!§L1904年7月29日；大清帝国、广东省泉州市惠安县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L陈伯达，1919年考入厦门集美师范学校。1924年到上海，任《厦声报》驻上海记者，同时在上海大学文学系学习，接触工团主义思想。1925年春回厦门，加入中国国民党，随即赴广州入中山大学文学院。1926年，任国民党汕头市党部秘书。在此认识同乡、时驻汕头国民革命军独立团团长张贞，当上张贞的秘书。北伐战争开始，张贞团攻下福州，扩编为国民革命军独立第四师，张贞任师长，陈伯达任师长秘书，福州军事干部学校政治教官，少校军衔。北伐战争失败后，陈伯达逃亡上海，加入中国工团党。后被安排秘密前往法国巴黎学习，结识同样身处巴黎的周恩来、张宗可等人，思想随之激进化，他认为正是工团主义思想的怯懦导致了大革命的失败。§!"
+ HNN_wang_he_shou_sec:0 "王鹤寿"
+ HNN_wang_he_shou_sec_desc:0 "§Y生于：§!§L1909年4月19日；大清帝国、河北省唐县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L王鹤寿，小名“春江”，在五兄弟排行第三。1925年4月加入中国工团主义青年团，同年10月，加入中国工团党。1925年间，担任罗章龙的“交通”，住在北京奶子府，送文件时被捕第一次入狱。其后，担任全国铁路总工会石家庄分会秘书、全国铁路总工会干事。大革命后长期在天津组织工团党地下工作，多次被捕入狱，由于长时间的受刑、戴脚铐导致两腿严重变形，因无医无药导致的淋巴结核破溃导致脖子上留下疤痕。尽管在政治上，普遍认为王鹤寿属于极权派的一份子，但是同时他支持周恩来等人所提出的“又红又专”理念。§!"
  HNN_zhao_zi_yang_eco:0 "赵紫阳"
  HNN_zhao_zi_yang_eco_desc:0 "§Y生于：§!§L1919年10月17日；大清帝国、河南省滑县§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L赵紫阳，原名赵修业1919年10月17日生于河南滑县桑村乡赵庄。父亲赵廷宾，字良乡，又名秋喜，家中有数十亩田地，是当地的一位地主，但平日乐善好施，得村民爱戴；他与发妻刘氏得一子，取名赵修业。1927年，赵紫阳进入位于桑村乡的县立第十七小学读书。1932年6月在桑村小学的一间简陋的教室里宣誓加入中国工青团，后由于工团党准备的夏季滑县暴动和其他起义遭镇压，地下党组织解散，赵修业与组织失去联系。1933年夏天，赵成功考取开封的省立初级中学（今开封高中），中学时期，他成绩优异，多次获得校方颁发的奖学金。上海起义爆发时，赵及其同学在开封呼吁。1936年，赵考入武昌高级中学。在武汉，他将自己的名字改为紫阳。并重新与在湖南的党组织取得联系，恢复党员身份。在工团党的革命胜利前，赵紫阳便是党内小有名气的中层干部，深受党和人民的信任。§!"
+ HNN_Shang_Kun_sec:0 "杨尚昆"
+ HNN_Shang_Kun_sec_desc:0 "§Y生于：§!§L1907年8月3日；大清帝国、四川省遂宁县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L杨尚昆1925年接触工团主义，随后在其胞兄烈士杨闇公的带领下走上革命道路，1926年，由青年团团员转为工团党党员；入上海大学学习，并参加了上海工人第一次、第二次武装起义的筹备工作。大革命失败后在组织的安排下重新回到四川工作，1936年四川根据地被军阀捣毁后同邓小平等人一同回到湖南。先后任宣传干事、组织机关报刊《红色中华》和《斗争》、红一军政治部主任等职务。§!"
+ HNN_Li_Fu_Chun_eco:0 "李富春"
+ HNN_Li_Fu_Chun_eco_desc:0 "§Y生于：§!§L1900年5月22日；大清帝国、湖南省长沙市§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L1919年，年仅19岁的李富春自费前往法国勤工俭学。到法国后，做过钳工和火车司机，写下小说《一个法国兵的忏悔》。他还发表了《法国哈佛尔施乃德工厂的华工实况》的调查报告。1920年8月，和李维汉等一起将他参与发起建立的勤工俭学励进会改名为工学世界社，确定“以实行社会革命为宗旨”，参与多次政治斗争。1923年与周恩来、李维汉等人组织旅欧中国少年工团党。1926年回国参加北伐战争，任国民革命军第二军副党代表兼政治部主任、军法处处长。大革命失败后先后在广东、上海从事革命工作，上海起义失败后前往湖南中央。革命胜利后主持湖南省经济工作。§!"
+ HNN_Li_Xian_Nian_eco:0 "李先念"
+ HNN_Li_Xian_Nian_eco_desc:0 "§Y生于：§!§L1909年6月23日；大清帝国、湖北省黄安市§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L李先念1926年10月参加农民运动，任乡农民协会执行委员，并加入工团主义青年团。1927年发动麻黄起义，随后带来许世友等起义部队辗转多地，最终与湖南三省革命根据地会师。统一战争期间，李先念留守后方组织中央党校为党和人民培训新一代干部群体。解放后担任湖北省委书记。§!"
+ HNN_rang_ming_de_sec:0 "穰明德"
+ HNN_rang_ming_de_sec_desc:0 "§Y生于：§!§L1912年10月22日；大清帝国、江西省莲花县坪里乡§!\n§Y派系：§!§l技官派§!\n§Y背景：§!§L由于家境贫寒，六七岁时读了一年私塾，八岁便给地主放牛，九岁到外地当学徒，十四岁回到家乡正值北伐革命军在莲花一带活动，受其影响参加了一些革命活动。大革命失败后，在各地军阀大行白色恐怖，环境极其险恶的形势下，他于1929年勇敢地加入工团主义青年团，担任青年团基层领导工作，配合红军作战。全国解放后，他服从组织安排，转到地方工作。历任西南军政委员会交通部副部长兼公路管理局局长、党委书记。在工作中他虚心向内行学习、向群众学习、向实践学习，掌握科学技术，由一个牧童迅速成长为公路专家并著有专著。§!"
+ HNN_peng_chong_eco:0 "彭冲"
+ HNN_peng_chong_eco_desc:0 "§Y生于：§!§L1915年3月27日；大清帝国、福建省漳州市§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L1933年3月彭冲加入工团主义青年团。1934年8月转为工团党党员。1930年代前期，彭冲在漳州地区从事地下工作配合国民党游击队对抗孙传芳，历任漳州地区地下党团支部书记、党支部书记。1934年，受漳州工委委派，彭冲加入由左翼知识分子组织的虹桥文艺研究社，并逐渐将该组织改造为中工党领导的文艺团体芗潮剧社。革命胜利后彭冲任江苏省委副书记，分管抓生产。§!"
+ HNN_Bo_Yi_Bo_eco:0 "薄一波"
+ POLITICS_HNN_BO_YI_BO_ARMY_DESC:0 "小时候，由于家里实在太穷，怕养不活孩子，父母被迫狠下心来，溺死了薄一波刚出生的弟弟。从小遭遇的种种不公，以及目睹到强加于中国的种种屈辱和伤痛，让薄一波的思想日益激进。那时，大洋彼岸发生了工团主义革命，随后不久，孙中山也在广州发动了国民革命，薄一波因此坚定不移地信仰社会主义，他想在山西建立一个公社式的乌托邦。1925年薄一波加入中国工团党，在大革命失败后重新回到山西组织地下工作。"
+ HNN_Bo_Yi_Bo_eco_desc:0 "§Y生于：§!§L1908年2月6日；大清帝国、山西省定襄县§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L小时候，由于家里实在太穷，怕养不活孩子，父母被迫狠下心来，溺死了薄一波刚出生的弟弟。从小遭遇的种种不公，以及目睹到强加于中国的种种屈辱和伤痛，让薄一波的思想日益激进。那时，大洋彼岸发生了工团主义革命，随后不久，孙中山也在广州发动了国民革命，薄一波因此坚定不移地信仰社会主义，他想在山西建立一个公社式的乌托邦。1925年薄一波加入中国工团党，在大革命失败后重新回到山西组织地下工作。§!"
+ HNN_hu_qiao_mu_eco:0 "胡乔木"
+ HNN_hu_qiao_mu_eco_desc:0 "§Y生于：§!§L1912年6月1日；大清帝国、江苏省盐城市§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L胡乔木，原名胡鼎新。1930年加入工团主义青年团，1932年转入工团党。解放后，任中国青年联合会办事处宣传部部长，同时开始使用笔名“乔木”。§!"
+ HNN_ma_long:0 "马龙"
+ HNN_ma_long_cnav:0 "马龙"
 
  CHI_su_yu: "粟裕"
  HNN_su_yu_cos: "粟裕"
@@ -1828,6 +1870,19 @@
  HNN_ju_jue_tooltip:0 "§G如果你想让特科政变就选这个§!"
  HNN_people_community_tt:0 "§L这是一项前无古人，后无来者的壮举§!"
  HNN_factory_change_tt:0 "§Y解锁一个新的工业公司§!"
+ china_build_all_country_time_tt:0 "生效时 £decision_icon_small §H$HNN_tie_lu_category$§!的花费减少 £pol_power 25。"
+ HNN_rang_ming_de_minister_tt:0 "生效时 £decision_icon_small §H$HNN_chuan_zang_tien_lu$§!的效果将得到增强。"
+ HNN_rang_ming_de_minister_road_tt:0 "在第一次雇用时将给予重庆至拉萨的道路升级"
+
+ HNN_shen_pan_zhe:0 "裁决者"
+ HNN_tian_gou:0 "天狗"
+ HNN_tian_cai:0 "无产阶级的天才"
+ HNN_ge_ming_zong_si_ling:0 "伟大领袖"
+ HNN_jiao_yuan:0 "教员"
+ HNN_ge_ming_ji:0 "革命家"
+ HNN_ge_ming_de_shou_hu_zhe:0 "革命的守护者"
+ HNN_fu_jia_weng:0 "富家翁\n§g他拥有万贯家财，虽然没有人能说得清这些钱到底是怎么来的。§!"
+ HNN_zong_she_ji_shi:0 "总设计师\n§g邓小平主席是中国革命的总设计师，邓小平所设计的‘中国式的社会主义’”将把中国变为强国，他是中华儿女的领路人。§!"
 
  HNN_pai_xi: "邓小平（索雷尔主义）-极权派；周恩来（温和社会主义）/陈云（农业社会主义）/钱学森（乌托邦技官主义）/周扬（社会未来主义）-技官派；习仲勋（自由社会主义）-改良派；高岗（集权工团主义）/刘少奇（民主工团主义）-正统派；赵紫阳（中间路线）-自由派；胡耀邦（民主社会主义）-民生派；王震（国家工团/民族安保）-民族派。"
 
@@ -2183,11 +2238,11 @@
  HNN_peng_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉彭真§!"
  HNN_li_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉李先念§!"
  HNN_xiang_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉项英§!"
- HNN_huang_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉黄永胜§!"
  HNN_liao_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉廖汉生§!"
  HNN_guang_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉许光达§!"
  HNN_wang_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉汪东兴§!"
  HNN_teng_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉滕海清§!"
+ HNN_huang_yong_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉黄永胜§!"
 
  HNN_big_clean_category:0 "清理反对派"
  HNN_big_clean_category_desc:0 "我们的政府是依靠一次不光彩的政变才上台成功的，除了军队以外，无论党内外都不承认我们的合法性，社会上示威抗议活动层出不穷，政府内基本停摆。而这一切实际上都是由§R叶剑英§!、§R林彪§!、§R贺龙§!他们组织起来的，这些军队首领他们名义上支持我们的政府，但背地里早就想把我们踹下去了，但是我们也不是那么容易对付的！\n\n§g你需要清洗掉一大批政府内与军队内的反对派来提升你的支持度，但是也要注意不要过火，一旦你清洗的人过多，军队将会再次发动政变§!。\n\n§C目前的死亡人数§!：[?HNN_ren_tou]"
@@ -2426,15 +2481,6 @@
  HNN_tai_wan:0 "防御台湾沿岸"
 
  HNN_east_asia_inner_circle_title_text:0 "亚洲解放战争"
-
- HNN_shen_pan_zhe:0 "裁决者"
- HNN_fu_jia_weng:0 "富家翁\n§g他拥有万贯家财，虽然没有人能说得清这些钱到底是怎么来的。§!"
- HNN_tian_gou:0 "天狗"
- HNN_tian_cai:0 "无产阶级的天才"
- HNN_ge_ming_zong_si_ling:0 "伟大领袖"
- HNN_jiao_yuan:0 "教员"
- HNN_ge_ming_ji:0 "革命家"
- HNN_ge_ming_de_shou_hu_zhe:0 "革命的守护者"
 
  HNN_zhong_hua_ren_ming_gong_he_guo_di_yi_ci_ren_ming_dai_biao_da_hui:0 "中华人民共和国第一次政治协商会议"
  HNN_zhong_hua_ren_ming_gong_he_guo_di_yi_ci_ren_ming_dai_biao_da_hui_desc:0 "随着国家的逐步统一，由代表着全中国所有的民主党派，人民团体，人民解放军，各地区，各民族和国外华侨的六百多位代表将汇聚在北京中南海怀仁堂举办中华人民共和国第一次政治协商会议，这次会议将决定新中国的未来。"
