--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -143,11 +143,11 @@
  YUN_totalist_party: "国民党-云南特别支部"
  YUN_totalist_party_long: "国民党-云南特别支部(Kuomintang - Yunnan Special Branch)\n§g云南省虽相对独立于国民党的政治机关外，不过国民党的特工也曾在昆明设立一个特别机构，以用于扩大活动和政权颠覆。随着北伐的失败和中国社会主义运动的衰落，这一特别支部中剩下的革命忠诚分子与国民党的新情报机构建立了新联系。§!"
  YUN_radical_socialist_party:0 "国民党"
- YUN_radical_socialist_party_long:0 "国民党(Kuomintang)\n§g在云南省，只有少数老党员仍忠于国民党。其他人要么转入地下支持极端主义运动，分裂出来组建新的政治团体，要么做出务实的选择，与该党的激进左翼保持距离。还敢在云南公开支持国民党的几个人也只是个更温和的小派别，他们对地方政治几乎没有实际影响力，大概这就是他们被保守派军阀容忍的唯一原因。§!"
+ YUN_radical_socialist_party_long:0 "国民党（激进派）(Kuomintang)\n§g在云南省，只有少数老党员仍忠于国民党。其他人要么转入地下支持极端主义运动，分裂出来组建新的政治团体，要么做出务实的选择，与该党的激进左翼保持距离。还敢在云南公开支持国民党的几个人也只是个更温和的小派别，他们对地方政治几乎没有实际影响力，大概这就是他们被保守派军阀容忍的唯一原因。§!"
  YUN_syndicalist_party:0 "新滇社"
  YUN_syndicalist_party_long:0 "新滇社(Xindianshe)\n§g这是一个由激进知识分子组成的地方政治俱乐部，英文名翻译过来就是“新社会”，他们与中国工团党保持着一定联系。在国民党崩溃之后，云南的社会主义者们发现自身处于十字路口。大多数人开始支持欧洲的工团模式。§!"
- YUN_social_democrat_party:0 "中国农工民主党"
- YUN_social_democrat_party_long:0 "中国农工民主党(Zhongguo Nonggong Minzhudang)\n§g与中国其他许多争论不休的左翼运动一样，中国农工民主党也是从国民党垮台后造成的权力真空中崛起的。其表面上模仿着欧美的农工党，领导层是自包括那些新兴的工团主义国家的欧洲各国的大学毕业的知识分子们。他们在反对工团主义的同时，也承认国民党老温和派的局限性和失败性，他们保证要建立一个能够将社会主义思想与行政、经济、政治体制相结合且有效运作的平台。§!"
+ YUN_social_democrat_party:0 "国民党"
+ YUN_social_democrat_party_long:0 "国民党（温和派）(Kuomintang)\n§g在云南省，只有少数老党员仍忠于国民党。其他人要么转入地下支持极端主义运动，分裂出来组建新的政治团体，要么做出务实的选择，与该党的激进左派保持距离。还敢在云南公开支持国民党的几个人也只是个行将就木的小派别，他们对地方政治几乎没有实际影响力，大概这就是他们被保守派军阀容忍的唯一原因。§!"
  YUN_social_liberal_party:0 "建国滇军（前国民革命军）"
  YUN_social_liberal_party_long:0 "建国滇军(Jian Guo Dian Jun)\n§g一支在云南的国民革命军残部，其在战场所向披靡，以及拥有出色战略的将领而闻名全国。他们对德意志帝国干涉北伐战争，导致革命满盘皆输而耿耿于怀。可如今他们沦为一具空壳活尸，流亡到云南，还起了个又老又看起来不积极的新名：建国滇军。他们对唐继尧的严厉的专制政府和拥护新社会主义的国民党左派持谨慎态度。由于唐继尧的信仰，他们作为进步的共和主义派没法融入云南的军队中，只能处在一种很危险的自治中，并且也仅仅在名义上对曾庇护过他们的人保持忠诚。§!"
  YUN_market_liberal_party:0 "西南实业系"
@@ -168,8 +168,8 @@
  YUN_Hu_Ruoyu_takes_over_party_long:0 "靖国滇军(Jing Guo Dian Jun)\n§g叛军叛军，叛军为何而叛，对唐继尧野心的嫉妒？不，云南在往绝路上走，需要一名强而有力的领袖来拉住它。军官团和唐继尧十年不和早已是众人皆知的秘密。只是双方都不敢干起来，但最近的军事行动所带来的灾难，最终促使他们先开枪。§!"
  YUN_Zhu_Peide_takes_over_party:0 "国民革命军"
  YUN_Zhu_Peide_takes_over_party_long:0 "国民革命军第三军(Guomin Geming Jun Di San Jun)\n§g一支在云南的国民革命军残部，其在战场所向披靡，以及拥有出色战略的将领而闻名全国。他们对德意志帝国干涉北伐战争，导致革命满盘皆输而耿耿于怀。如今他们沦为一具空壳活尸，流亡到云南，但他们仍对唐继尧的严厉的专制政府和拥护新社会主义的国民党左派持谨慎态度。由于唐继尧的信仰，他们作为进步的共和主义派没法融入云南的军队中，只能处在一种很危险的自治中，并且也仅仅在名义上对曾庇护过他们的人保持忠诚。§!"
- YUN_Zhu_De_takes_over_party_long:0 "中国农工民主党(Zhongguo Nonggong Minzhudang)\n§g与中国其他许多争论不休的左翼运动一样，中国农工民主党也是从国民党垮台后造成的权力真空中崛起的。其表面上模仿着欧美的农工党，领导层是自包括那些新兴的工团主义国家的欧洲各国的大学毕业的知识分子们。他们在反对工团主义的同时，也承认国民党老温和派的局限性和失败性，他们保证要建立一个能够将社会主义思想与行政、经济、政治体制相结合且有效运作的平台。§!"
- YUN_Long_Zhu_De_takes_over_party:0 "中国农工民主党"
+ YUN_Zhu_De_takes_over_party:0 "国民党(云南改组会)"
+ YUN_Zhu_De_takes_over_party_long:0 "中国国民党 - 改组同志会（云南党支部）\n§g改组同志会与中国各地都有联系，并且会在当地设立分支机构，希望让这些分支站稳脚跟，最终成为规模更大的党支部，支持左派主导的中央委员会。一些改组会成员和支持国民党的社会主义者建立了联系，成功在云南建立了改组会的支部。§!"
  YUN_Tang_Federalist_party_long:0 "中国致公党(Zhongguo Zhigongdang)"
  YUN_Tang_Federalist_party:0 "中国致公党"
  YUN_Tangs_rule:0 "唐继尧之治"
@@ -483,7 +483,7 @@
  yun.73.d:0 "我们争取国民党左派支持的计划失败了，如今他们军队溃败，士气低落，分散全国各地，这也让我们被迫面对议会和军官的怒火。民间的不满在不断高涨，龙云看到了夺取政权的潜在机会，似乎他已抵达贵州，并开始集结效忠他的部队向昆明进军。虽然我们派了一支部队与他们正面交锋，但由于我们脆弱的公众支持度，军队是否还会忠于我们，仍是未知数。"
  yun.73.a:0 "以前赢过他们，现在就还能继续赢"
  yun.74.t:0 "龙云进军昆明"
- yun.74.d:0 "从东边杀过来的龙云，最初是计划包围昆明，准备进行围城作战，然而在他到的时候，昆明政府和中国农工民主党人已经沿着滇越铁路昆河段逃出昆明了，一名城内使者宣布将这座城市交给他。龙云一枪未发，便占领了昆明，在翠湖公园前重新任命自己云南省政府主席，承诺要让云南省一劳永逸地恢复稳定。"
+ yun.74.d:0 "从东边杀过来的龙云，最初是计划包围昆明，准备进行围城作战，然而在他到的时候，昆明政府已经沿着滇越铁路昆河段撤离了，一名城内使者宣布将这座城市交给他。龙云一枪未发，便占领了昆明，在翠湖公园前重新任命自己为云南督军，承诺要让云南省彻彻底底地恢复稳定。"
  yun.74.a:0 "龙云万岁！"
  yun.80.t:0 "云南经济"
  yun.80.d:0 "云南地处山区，对外交通不便，经济综合实力仍属我国经济欠发达地区之一。它主要依靠农业和采矿业来维持省内运作，而为了养活农民则特别依赖鸦片生产和烟草、糖等经济作物。在昆明，几十年前所建造的昆明兵工厂和纺织业，也开始为中国这片工业荒漠增添一座小型工业基地。这种看似无关的经济特性如今再次重要起来，黑色星期一余波极大破坏了云南省的稳定，像缪云台这样的经济学者提出了巨大的改革计划，以帮助云南走出危机，迈向未来。\n\n长期研究云南经济的专家、中国最著名的经济学家之一：缪云台。多年来一直是唐继尧经济政策最无情的批评者之一。为了支持云南省走向工业化和全面整顿农业生产，缪云台提出了云南的改革方案，其改革分为农业改革和工业改革两部分。长远来看，云南有能力完成这两项计划，但他认为，如果同时实施这两项计划的话，既大大降低我们的经济效益，也会阻碍改革成效。因此他建议，无论选择先进行哪项改革，就应该把那一项改到底，改革完再去改另一项。"
@@ -504,7 +504,7 @@
  yun.90.a:0 "国民党有能力使中国重焕新生！"
  yun.90.b:0 "朱培德你无颜面对云南的父老乡亲们！"
  yun.91.t:0 "解除建国滇军武装"
- yun.91.d:0 "随着云南稳定工作的顺利进行，昆明人民大会开始召开，要求朱德下台，交给文职政党。多年来，朱德一直是中国农工民主党的成员，一个弱小的农业社会民主党，该党在云南省并无多大成绩。虽然大会更希望支持该党创始人章伯均上台，但或许云南省需要的是一只铁腕，来带领云南走出即将到来的黑暗……"
+ yun.91.d:0 "随着云南稳定工作的顺利进行，昆明人民大会开始召开，要求朱德下台，交给文职政党。多年来，朱德一直是中国农工民主党的合作者，一个弱小的农业社会民主党，该党在云南省并无多大成绩。虽然大会更希望支持该党创始人章伯均上台，但或许云南省需要的是一只铁腕，来带领云南走出即将到来的黑暗……"
  yun.91.a:0 "朱德将继续掌权"
  yun.91.b:0 "章伯均将担任新政府主席！"
  yun.92.t:0 "久别重逢"
@@ -1044,7 +1044,7 @@
  yun.602.d:0 "来自中国云南省的消息称，在这多山省份爆发一系列起义后，临时政府主席龙云被国民革命军成功罢免下台。以朱培德将军为首的国民革命军现在向昆明进行和平游行，这位光彩夺目的新任政府主席宣布，他不仅要追随孙先生的步伐，更要恢复被暗杀的蒋司令的理想。秉持这样的雄心，许多人猜想，这个看似在中国孤立的偏远一角，真能扭转北伐后国民党的颓势，带回一个民族、民权和民生的统一中国……"
  yun.602.a:0 "十年前的失败也不足以让他们停下来，是吗？"
  yun.603.t:0 "朱德平定云南"
- yun.603.d:0 "来自中国云南省的消息称，在这多山省份爆发一系列起义后，临时政府主席龙云被建国滇军成功罢免下台。随着形势进一步恶化，朱德召集了一支由云南讲武堂的志愿军和筋疲力尽的军阀组成的军队，并最终赢得了决定性的胜利。然而也有报道说，朱培德的国民党军队已经派了一支代表团到昆明，而朱德也同意妥协地将政府主席交给文官政府。但引发了一个冲突，朱德以前效忠过国民革命军没错，但他现在也是中国农工民主党的一员，这对他来说非常矛盾。"
+ yun.603.d:0 "来自中国云南省的消息称，在这多山省份爆发一系列叛乱后，国民革命军成功将临时督军龙云罢免下台。随着形势进一步恶化，朱德召集了一支由云南讲武堂的志愿军和筋疲力尽的军阀组成的军队，并最终赢得了决定性的胜利。然而也有报道说，朱培德的国民党军队已经派了一支代表团到昆明，而朱德将政权移交给文官政府的承诺也只是权宜之计。朱德现在正在自己的国民革命军旧同僚与左派势力新朋友间摇摆不定，云南的未来仍不明朗。"
  yun.603.a:0 "真令人不安"
  yun_tonkin.1.t:0 "控制滇越铁路"
  yun_tonkin.1.d:0 "随着我们占领了东京，也意味着掌控了滇越铁路全部，这可是云南经济的重要生命线。通过它，每月有成千上万吨的锡矿和其他资源流入国际市场，它对云南人的重要性自然不可小觑。他们想要我们开放这条铁路，并派出一支代表团，来详细央求使用这条铁路的条款。我们可以真诚地与他们协商，保持着友好共赢的关系，但如果我们征收关税的话，那可就大大的有利可图了……"
